fix(css): Align small buttons in the middle

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -15,6 +15,10 @@
     border-color: #7289da;
 }
 
+.btn-toolbar {
+    text-align: center;
+}
+
 /* ERROR FIXES */
 
 .error.err-fix {
